--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -1,6 +1,28 @@
-.h1 {
-    color: #0bc33f;
-    font-family: "Larken-Thin", sans-serif;
-    font-size: 2rem;
+.navbar {
+    display: flex;
+    align-items: center;
     margin: 0;
+    padding: 1rem 4rem;
+}
+
+.navbar>a {
+    text-decoration: none;
+    color: white;
+}
+
+.navbar ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin-left: auto;
+    /* pushes the list to the right */
+    gap: 2rem;
+    /* evenly space the <li> items */
+}
+
+.navbar ul a {
+    text-decoration: none;
+    font-size: 12px;
+    color: white;
 }
