--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -16,13 +16,16 @@
     margin: 0;
     padding: 0;
     margin-left: auto;
-    /* pushes the list to the right */
     gap: 2rem;
-    /* evenly space the <li> items */
 }
 
 .navbar ul a {
     text-decoration: none;
     font-size: 12px;
     color: white;
+}
+
+.navbar img{
+    width: 20px;
+    height: 20px;
 }
