--- a/src/Gallery/GridColumn.module.css
+++ b/src/Gallery/GridColumn.module.css
@@ -1,5 +1,7 @@
 .gridColumn {
-    padding: 0.5em;
+  padding: 0.5em;
+  height: 100%; /* will fill the 100vh of .gallery */
+  overflow-y: hidden;
 }
 
 .col0 {
