Update hover effect and cursor

--- a/src/Gallery/DesignCard/DesignCard.module.css
+++ b/src/Gallery/DesignCard/DesignCard.module.css
@@ -29,3 +29,8 @@
   background-color: rgb(111 255 0);
   color: black;
 }
+
+.card:hover {
+  transform: scale(1.02);
+  transition: all 0.8s ease-in-out;
+}
