--- a/src/Gallery/DesignCard/DesignCard.module.css
+++ b/src/Gallery/DesignCard/DesignCard.module.css
@@ -25,8 +25,9 @@
 
 .tagList li {
   font-size-adjust: 0.7;
-  font-size: 0.7rem;
-  background-color: rgb(111 255 0);
+  font-size: 0.6rem;
+  padding: 0.1rem, 0.5rem;
+  background-color: rgba(255, 255, 255, 0.774);
   color: black;
 }
 
