--- a/src/components/DetailsGallery/DetailsGallery.module.css
+++ b/src/components/DetailsGallery/DetailsGallery.module.css
@@ -1,28 +1,27 @@
 .media {
-  height: auto;
-  width: 100%;
-  padding: 0;
+    height: auto;
+    width: 100%;
 }
 
-.detailsContainer{
+.detailsContainer {
     margin: 10%;
     text-align: center;
 }
 
-.descriptionDetails{
+.descriptionDetails {
     font-family: Larken-Extra-Bold;
 }
 
-.textContainer{
+.textContainer {
     margin: 10;
     align-items: center;
 }
 
-.mediaContainer{
+.mediaContainer {
     margin-top: 9%;
 }
 
-.title{
+.title {
     font-size: 100px;
 }
 
@@ -31,18 +30,32 @@ ul {
     font-size: 20px;
 }
 
-#descriptionClient{
+#descriptionClient {
     font-family: Larken-Medium;
     background-color: white;
     color: black;
 }
 
-#descriptionYear{
+#descriptionYear {
     font-family: Larken-Medium;
     background-color: white;
     color: black;
 }
 
-.description{
+.description {
     font-size: 30px;
+}
+
+.wistiaBox {
+    position: relative;
+    width: 100%;
+    padding-top: 56.25%;
+}
+
+.wistiaBox iframe {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
 }
