--- a/src/components/DetailsGallery/DetailsGallery.module.css
+++ b/src/components/DetailsGallery/DetailsGallery.module.css
@@ -5,6 +5,7 @@
 
 .detailsContainer {
     margin: 10%;
+    margin-bottom: 0;
     text-align: center;
 }
 
@@ -50,6 +51,22 @@ ul {
     position: relative;
     width: 100%;
     padding-top: 56.25%;
+}
+
+#logo {
+    margin-left: 4%;
+    height: 2.5rem;
+    transition: all 0.5s ease;
+}
+
+footer {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 50px;
+    color: white;
 }
 
 .wistiaBox iframe {
