--- a/src/components/DetailsGallery/DetailsGallery.module.css
+++ b/src/components/DetailsGallery/DetailsGallery.module.css
@@ -69,6 +69,14 @@ footer {
     color: white;
 }
 
+footer a{
+    transition: transform 0.5s ease;
+}
+
+footer a:hover {
+    transform: scale(1.2);
+}
+
 .wistiaBox iframe {
     position: absolute;
     inset: 0;
