--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -33,12 +33,15 @@
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: white;
-    transition: all 0.5s ease;
 }
 
 .navbar a:hover {
     transform: scale(1.2);
     font-family: Larken-Extra-Bold;
+}
+
+.navbar a{
+    transition: all 0.5s ease;
 }
 
 .navbar #logo {
