--- a/src/components/DetailsGallery/DetailsGallery.module.css
+++ b/src/components/DetailsGallery/DetailsGallery.module.css
@@ -4,6 +4,7 @@
 }
 
 .detailsContainer {
+    justify-content: center;
     margin: 10%;
     margin-bottom: 0;
     text-align: center;
@@ -14,7 +15,6 @@
 }
 
 .textContainer {
-    margin: 10;
     align-items: center;
 }
 
@@ -27,6 +27,7 @@
 }
 
 ul {
+    padding: 0;
     list-style-type: none;
     font-size: 20px;
 }
@@ -69,7 +70,7 @@ footer {
     color: white;
 }
 
-footer a{
+footer a {
     transition: transform 0.5s ease;
 }
 
@@ -83,4 +84,31 @@ footer a:hover {
     width: 100%;
     height: 100%;
     border: none;
+}
+
+@media (max-width: 800px) {
+    .title {
+        font-size: 50px;
+    }
+
+    ul {
+        padding: 0;
+        list-style-type: none;
+        font-size: 18px;
+    }
+
+    .description {
+        font-size: 18px;
+    }
+
+    footer {
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-size: 25px;
+        color: white;
+    }
+
 }
